lesson23/wordpress-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-db
  namespace: wordpress-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      tier: database
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      containers:
      - name: mysql
        image: mysql:5.7 # Используйте актуальную версию
        ports:
        - containerPort: 3306
          name: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db-service
  namespace: wordpress-ns
spec:
  selector:
    app: mysql
    tier: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest # Используйте актуальную версию
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress-ns
spec:
  selector:
    app: wordpress
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: LoadBalancer
