lesson23/mysql-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-wordpress
  namespace: wordpress-ns
spec:
  podSelector:
    matchLabels:
      app: mysql # Политика применяется к подам MySQL
      tier: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress
